k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
  namespace: student-management
  labels:
    app.kubernetes.io/name: student-management
    app.kubernetes.io/managed-by: kubectl
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: student-management
  ports:
    - name: http
      protocol: TCP
      port: 8089
      targetPort: http
      nodePort: 30089
