k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
  labels:
    app: student-management-api
spec:
  type: NodePort
  ports:
    - port: 8089
      targetPort: 8089
      nodePort: 30089
  selector:
    app: student-management-api
